--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,21 @@
+# Netlify configuration file
 [build]
   command = "npm run build"
   publish = "dist"
 
+# Redirect all routes to index.html for SPA routing
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+  force = true
+
+# Set security headers
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline' fonts.googleapis.com; font-src 'self' fonts.gstatic.com; img-src 'self' data: https://clmoutstrsbtufadxvsh.supabase.co https://images.unsplash.com; connect-src 'self' https://clmoutstrsbtufadxvsh.supabase.co;"
